classDiagram
    class iPhone {
        -ReprodutorMusical reprodutorMusical
        -AparelhoTelefonico aparelhoTelefonico
        -NavegadorInternet navegadorInternet
        +iPhone()
        +acessarReprodutorMusical() ReprodutorMusical
        +acessarAparelhoTelefonico() AparelhoTelefonico
        +acessarNavegadorInternet() NavegadorInternet
    }

    class ReprodutorMusical {
        <<interface>>
        +tocar()
        +pausar()
        +selecionarMusica(musica: String)
    }

    class AparelhoTelefonico {
        <<interface>>
        +ligar(numero: String)
        +atender()
        +iniciarCorreioVoz()
    }

    class NavegadorInternet {
        <<interface>>
        +exibirPagina(url: String)
        +adicionarNovaAba()
        +atualizarPagina()
    }

    class Ipod {
        -musicaAtual: String
        -tocando: boolean
        +tocar()
        +pausar()
        +selecionarMusica(musica: String)
    }

    class Telefone {
        -emChamada: boolean
        -numeroAtual: String
        +ligar(numero: String)
        +atender()
        +iniciarCorreioVoz()
    }

    class SafariNavegador {
        -paginaAtual: String
        -listaAbas: List~String~
        +exibirPagina(url: String)
        +adicionarNovaAba()
        +atualizarPagina()
    }

    iPhone --> ReprodutorMusical
    iPhone --> AparelhoTelefonico
    iPhone --> NavegadorInternet
    Ipod ..|> ReprodutorMusical
    Telefone ..|> AparelhoTelefonico
    SafariNavegador ..|> NavegadorInternet
